--- a/css/style.css
+++ b/css/style.css
@@ -745,6 +745,16 @@ video {
   background-color: rgb(240 199 199 / var(--tw-bg-opacity));
 }
 
+.bg-emerald-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
 .p-3 {
   padding: 0.75rem;
 }
